# pyvgmstream

./: .gitignore  .gitmodules  CMakeLists.txt  build.ps1  readme.md  setup.py
install_dependency/: linux.sh  macos.sh
pyvgmstream/: __init__.py
src/: test.cpp  vgmstream_python.cpp
src/core/: config.cpp  config.h  convert.cpp  convert.h  streamfile_mem.c  streamfile_mem.h
